--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | 3-column preview card component</title>
 <link rel="stylesheet" href="styles.css">
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div class="sedans">
-      <img src="images/icon-sedans.svg" alt="Sedans">
+      <img src="/images/icon-sedans.svg" alt="Sedans">
       <h2>SEDANS</h2>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
      or on your next road trip.</p>
@@ -21,15 +21,15 @@
     </div>
     
     <div class="suv">
-      <img src="images/icon-suvs.svg" alt="Sedans">
-      <h2>SUV's</h2>
+      <img src="/images/icon-suvs.svg" alt="Sedans">
+      <h2>SUVS</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
       and off-road adventures.</p>
       <button class="btn btn-suv">Learn More</button>
     </div>
    
     <div class="luxury">
-      <img src="images/icon-luxury.svg" alt="Sedans">
+      <img src="/images/icon-luxury.svg" alt="Sedans">
       <h2>LUXURY</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
       rental and arrive in style.</p>
