--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div class="sedans">
-      <img src="/images/icon-sedans.svg" alt="Sedans">
+      <img src="images/icon-sedans.svg" alt="Sedans">
       <h2>SEDANS</h2>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
      or on your next road trip.</p>
@@ -21,7 +21,7 @@
     </div>
     
     <div class="suv">
-      <img src="/images/icon-suvs.svg" alt="Sedans">
+      <img src="images/icon-suvs.svg" alt="Sedans">
       <h2>SUVS</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
       and off-road adventures.</p>
@@ -29,7 +29,7 @@
     </div>
    
     <div class="luxury">
-      <img src="/images/icon-luxury.svg" alt="Sedans">
+      <img src="images/icon-luxury.svg" alt="Sedans">
       <h2>LUXURY</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
       rental and arrive in style.</p>
